# swi-tools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.arista/: secret_allowlist.yaml
.github/workflows/: pytest.yml  release.yml
src/switools/: __init__.py  __main__.py  callbacks.py  cli.py  crc32collision.py  create.py  signature.py  signaturelib.py  verify.py
switools/: __init__.py  crc32collision.py  signaturelib.py  swisignature.py  swisigningservice.py  verifyswi.py
swixtools/: __init__.py  create.py
swixtools/static/: schema1.0.json
tests/: EOS.swi.1.0  EOS.swi.3.0  MockSigningServer.py  swim_test.ref  swim_test.sh  test_swisignature.py  test_swixsignature.py  test_verifyswi.py  test_verifyswix.py
